# just-cal

./: .gitignore  AGENTS.md  Makefile  README.md  plan.md  pyproject.toml  test_caldav_connection.py
.beads/: issues.jsonl
.claude/hooks/: format.sh
src/just_cal/: __init__.py  __main__.py  caldav_client.py  cli.py  config.py  event.py  exceptions.py
src/just_cal/commands/: __init__.py  add.py  delete.py  edit.py  list.py  search.py
src/just_cal/utils/: __init__.py  date_parser.py  output.py  recurrence_parser.py  validators.py
src/justcal/: __init__.py
tests/: conftest.py  test_caldav_client.py  test_cli.py  test_config.py  test_date_parser.py  test_event.py  test_exceptions.py  test_recurrence_parser.py  test_validators.py
tests/test_commands/: test_add.py  test_delete.py  test_edit.py  test_list.py  test_search.py
